--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,7 @@
 {
   "version": 2,
-  "public": true,
-  "builds": [
-    {
-      "src": "index.html",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
-  ]
-}
-{
   "routes": [
     { "src": "/audio/(.*)", "dest": "/audio/$1" },
-    { "src": "/images/(.*)", "dest": "/images/$1" }
+    { "src": "/image/(.*)", "dest": "/image/$1" }
   ]
 }
